# cashew

./: .gitignore  README.md  pyproject.toml
backend/config/: settings.py  urls.py
backend/finance/: models.py  serializers.py  urls.py  views.py
backend/finance/migrations/: 0002_alter_expensecategory_options_alter_income_options_and_more.py
backend/users/: models.py
config/: settings.py  urls.py
finance/: admin.py  models.py  serializers.py  views.py
finance/migrations/: 0001_initial.py
frontend/src/: App.tsx  api.ts  types.ts
frontend/src/components/: ExpenseSection.tsx  IncomeSection.tsx  SummaryCards.tsx
frontend/src/components/ui/: Button.tsx  Card.tsx  Input.tsx
frontend/src/context/: AuthContext.tsx  authContextType.ts  useAuth.ts
frontend/src/pages/: Dashboard.tsx  Login.tsx
frontend/src/services/api/: apiClient.ts  auth.api.ts  finance.api.ts  index.ts
users/: urls.py  views.py
users/migrations/: 0001_initial.py
