[project]
name = "cashew"
version = "0.1.0"
description = "Personal finance tracking API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0",
    "djangorestframework>=3.17",
    "djangorestframework-simplejwt>=5.5",
    "djoser>=2.3",
    "social-auth-app-django>=5.7",
    "cryptography>=46.0",
    "django-cors-headers>=4.9.0",
    "python-dotenv>=1.2.2",
]
